Added scheme support.

--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.150 2002-11-15 09:01:48 knok Exp $
+dnl $Id: configure.in,v 1.151 2003-01-15 10:12:17 knok Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -419,6 +419,7 @@ AC_OUTPUT([Makefile
 	   src/Makefile
 	   template/Makefile
 	   contrib/Makefile
+	   scheme/Makefile
 	   tests/Makefile
 	   tests/data/Makefile
 	   tests/data/ja/Makefile
