--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -203,6 +203,7 @@ $WAKATI  = $@OPT_WAKATI_DEFAULT@;
 # $LIBDIR = "@PERLLIBDIR@";
 # $FILTERDIR = "@FILTERDIR@";
 # $TEMPLATEDIR = "@TEMPLATEDIR@";
+# $SCHEMEDIR = "@SCHEMEDIR@";
 
 1;
 
