--- a/pl/var.pl.in
+++ b/pl/var.pl.in
@@ -1,5 +1,5 @@
 # -*- Perl -*-
-# $Id: var.pl.in,v 1.12 2000-03-02 02:39:33 satoru Exp $
+# $Id: var.pl.in,v 1.13 2003-01-15 10:12:17 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -140,6 +140,16 @@ $USE_NKF_MODULE = 0;
 %Supported = 
     (
      'text/plain' => "yes",
+     );
+
+%SupportedScheme =
+    (
+     'file' => "yes",
+     );
+
+%RECURSIVE_SCHEME =
+    (
+     'file' => 1,
      );
 
 # Dummy function for gettextization.
