* filter/Makefile.am: Added an entry for ooo.pl * tests/data/ja/{oowriter.sxw,oocalc.sxc,ooimpress.sxi,oodraw.sxd}:   Added new files for testsuite. * pl/conf.pl.in: Added entries for OpenOffice sx[wcid].

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -34,7 +34,8 @@ filter_DATA = bzip2.pl \
 	      postscript.pl \
 	      dvi.pl \
 	      rpm.pl \
-	      deb.pl
+	      deb.pl \
+              ooo.pl
 
 EXTRA_DIST = $(filter_DATA)
 
