* filter/Makefile.am: Added an entry for rtf.pl * filter/pdf.pl: Fixed the problem in [n-u-j:03064], Adapted to xpdf 2.02.

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -35,7 +35,8 @@ filter_DATA = bzip2.pl \
 	      dvi.pl \
 	      rpm.pl \
 	      deb.pl \
-              ooo.pl
+              ooo.pl \
+              rtf.pl
 
 EXTRA_DIST = $(filter_DATA)
 
