--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -17,7 +17,7 @@ TESTS =	mknmz-1 mknmz-2 mknmz-3 mknmz-4 mknmz-5 \
 	namazu-cgi-1 namazu-cgi-2 namazu-cgi-3 namazu-cgi-4 \
 	namazu-cgi-5 namazu-cgi-6 namazu-cgi-7 namazu-cgi-8 \
 	namazu-cgi-9 namazu-cgi-10 \
-	ja-mknmz-1 ja-namazu-cgi-1
+	ja-mknmz-1 ja-namazu-cgi-1 ja-namazu-1
 
 clean-local:
 	rm -rf test-log tmp-data tmp.* idx[0-9]* ja-idx[0-9]*
