--- a/tests/data/ja-spec/Makefile.am
+++ b/tests/data/ja-spec/Makefile.am
@@ -1,3 +1,3 @@
 ## Process this file with automake to produce Makefile.in
-EXTRA_DIST  =   yama-umi.txt
-
+EXTRA_DIST  =   yama-umi.txt \
+		bad-phsrase.txt
