--- a/tests/data/ja/Makefile.am
+++ b/tests/data/ja/Makefile.am
@@ -30,4 +30,8 @@ EXTRA_DIST  =   acrobat3.pdf \
 		powerpoint97.ppt \
 		postscript.ps \
 	        dvi.dvi \
-                rtf.rtf
+                rtf.rtf \
+                oowriter.sxw \
+                oocalc.sxc \
+                oodraw.sxd \
+                ooimpress.sxi
