--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -34,6 +34,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.doc|.*\\.xls|.*\\.ppt" .	   # Word, Excel, PowerPoint
 		"|.*\\.j[sabf]w|.*\\.jtd" .        # Ichitaro 4, 5, 6, 7, 8
                 "|.*\\.sx[widc]" .                 # OpenOffice Writer,Calc,Impress,Draw
+		"|.*\\.rtf" .   	           # Rich Text Format
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
 #
