(sync with stable-2-0) Add MacOSX to NEWS, Copyright year -2003, ChangeLog

--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.153 2003-05-13 07:55:03 rug Exp $
+dnl $Id: configure.in,v 1.154 2003-07-15 09:46:51 makoto Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -36,7 +36,7 @@ dnl *
 dnl * Namazu Copyright.
 dnl * 
 COPYRIGHT="Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.\n\
-Copyright (C) 2000-2002 Namazu Project All rights reserved."
+Copyright (C) 2000-2003 Namazu Project All rights reserved."
 AC_SUBST(COPYRIGHT)
 AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT", [Namazu Copyright])
 
