* scripts/mknmz.in(show_config): Modify message
	* pl/codeconv.pl(eucjp_zen2han_ascii,normalize_eucjp): New
	subroutines

	* filter/{excel|msword|powerpoint|ooo|taro7_10}.pl: Added
	codeconv::normalize_eucjp()

	* filter/ooo.pl: Added addMagicEntry for OpenOffice.org1.1

	* tests/data/{en,ja}/apachecache.txt: Added new file for
	testsuite.

	* doc/{en,ja}/manual.html (filter): Added descriptions about
	apachecache

	* filter/Makefile.am: Added an entry for apachecache.pl

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -36,7 +36,8 @@ filter_DATA = bzip2.pl \
 	      rpm.pl \
 	      deb.pl \
               ooo.pl \
-              rtf.pl
+              rtf.pl \
+	      apachecache.pl
 
 EXTRA_DIST = $(filter_DATA)
 
