* tests/data/{en,ja}/hdml.hdml: Added new file for testsuite.
	* tests/data/{en,ja}/Makefile.am: Added apachecache.txt, hdml.hdml

	* pl/conf.pl.in ($ALLOW_FILES): Added extensions of hdml

--- a/tests/data/en/Makefile.am
+++ b/tests/data/en/Makefile.am
@@ -18,4 +18,7 @@ EXTRA_DIST  = acrobat3.pdf \
 	      dvi.dvi \
               namazu-dummy_1.0-1_i386.deb \
               rpm.rpm \
-              oowriter.sxw
+              oowriter.sxw \
+              apachecache.txt \
+              hdml.hdml
+
