--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -35,6 +35,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.j[sabf]w|.*\\.jtd" .        # Ichitaro 4, 5, 6, 7, 8
                 "|.*\\.sx[widc]" .                 # OpenOffice Writer,Calc,Impress,Draw
 		"|.*\\.rtf" .   	           # Rich Text Format
+	        "|.*\\.hdml" .			   # HDML
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
 #
