* filter/taro7_10.pl: remove remove_ctlcode(). * filter/mp3.pl: Merged from STABLE. (namazu-devel-en#54, Contributed by Luc, thanks.) * THANKS: Added. * tests/data/{en,ja}/ID3v{1,2}.mp3: Added new files for testsuite. * tests/data/{en,ja}/Makefile.am: Added ID3v{1,2}.mp3 * pl/conf.pl.in ($ALLOW_FILES): Added extension of mp3 * filter/Makefile.am: Added an entry for mp3.pl * doc/{en,ja}/manual.html (filter): Added descriptions about mp3 * doc/{en,ja}/tutorial.html: Fixed typo.

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -37,7 +37,8 @@ filter_DATA = bzip2.pl \
 	      deb.pl \
               ooo.pl \
               rtf.pl \
-	      apachecache.pl
+	      apachecache.pl \
+	      mp3.pl
 
 EXTRA_DIST = $(filter_DATA)
 
