* filter/dvi.pl: Support jdvi2tty. * doc/ja/manual.html: Add ps2text URI. * tests/data/ja/Makefile.am: Add rpm.rpm.

--- a/tests/data/ja/Makefile.am
+++ b/tests/data/ja/Makefile.am
@@ -31,6 +31,7 @@ EXTRA_DIST  =   acrobat3.pdf \
 		postscript.ps \
 	        dvi.dvi \
                 rtf.rtf \
+                rpm.rpm \
                 oowriter.sxw \
                 oocalc.sxc \
                 oodraw.sxd \
