--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.122 2003-07-29 22:32:19 makoto Exp $
+# $Id: mknmz.in,v 1.123 2003-09-06 08:26:38 usu Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000,2001 Namazu Project All rights reserved.
@@ -2491,13 +2491,19 @@ sub decide_type ($$) {
     util::dprint("decide_type: name: $name, cont: $cont\n");
     if ($cont =~ m!^text/plain! && $name =~ m!^text/plain!) {
 	return $name;
-    } elsif ($cont =~ m!^application/octet-stream!) {
+    } elsif ($cont =~ m!^application/octet-stream! &&
+             $name !~ m!^text/!) {
 	return $name;
     } elsif ($cont =~ m!^application/(excel|powerpoint|msword)! &&
 	     $name !~ m!^application/octet-stream!)  {
 	# FIXME: Currently File::MMagic 1.02's checktype_data() 
 	# is unreliable for them.
 	return $name;
+    } elsif ($cont =~ m!^application/x-zip! &&
+             $name =~ m!^application/!) {
+        # zip format is used other applications e.g. OpenOffice.
+        # It is necessary to add to check extention.
+        return $name;
     }
 
     return $cont;
